--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,42 +12,44 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-15 Sun 13:44]
+#+CAPTION: Clock summary at [2017-01-16 Mon 09:46]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *84:01* |       |       | 100.0 |
+| *Total time*                                                                | *84:12* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 84:01   |       |       | 100.0 |
-| Active                                                                      |         | 84:01 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:35 |   0.7 |
+| Stories                                                                     | 84:12   |       |       | 100.0 |
+| Active                                                                      |         | 84:12 |       | 100.0 |
+| COMPLETED Sprint and product backlog grooming                               |         |       |  0:46 |   0.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:57 |   1.1 |
 | COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       |  3:24 |   4.0 |
 | COMPLETED Add basic validation infrastructure                               |         |       |  8:40 |  10.3 |
 | COMPLETED Fix borked windows build                                          |         |       |  0:26 |   0.5 |
 | COMPLETED Clean up enumerator implementation                                |         |       |  1:05 |   1.3 |
 | COMPLETED Measure validation slowdown                                       |         |       |  6:38 |   7.9 |
-| COMPLETED Parsing should support dot notation                               |         |       |  2:54 |   3.5 |
+| COMPLETED Parsing should support dot notation                               |         |       |  2:54 |   3.4 |
 | COMPLETED Analysis for changes required in order to support containers      |         |       |  3:15 |   3.9 |
 | COMPLETED Add support for object based container types in C#                |         |       |  5:48 |   6.9 |
 | COMPLETED Understand the behaviour of helpers and assistants                |         |       |  1:13 |   1.4 |
 | CANCELLED Add support for generic parents in yarn                           |         |       |  0:35 |   0.7 |
 | COMPLETED Fix assorted windows warnings                                     |         |       |  0:19 |   0.4 |
-| COMPLETED Build dogen on windows locally                                    |         |       |  7:32 |   9.0 |
+| COMPLETED Build dogen on windows locally                                    |         |       |  7:32 |   8.9 |
 | COMPLETED Fix borked windows build                                          |         |       |  1:54 |   2.3 |
 | COMPLETED Generate windows packages with WIX                                |         |       |  3:28 |   4.1 |
 | COMPLETED Add validation around instatitation of abstract classes           |         |       |  2:25 |   2.9 |
 | COMPLETED Add validation to ensure enumerators do not have types            |         |       |  0:21 |   0.4 |
 | COMPLETED Add appveyor support for bintray                                  |         |       |  2:23 |   2.8 |
 | COMPLETED Add read support for upsilon models                               |         |       | 13:26 |  16.0 |
-| STARTED Create an upsilon yarn frontend                                     |         |       |  9:25 |  11.2 |
-| STARTED Add auxiliary function properties to c#                             |         |       |  1:11 |   1.4 |
-| STARTED Add internal object dumper resolution                               |         |       |  4:51 |   5.8 |
-| STARTED Add support for generic container types to C#                       |         |       |  1:16 |   1.5 |
+| POSTPONED Create an upsilon yarn frontend                                   |         |       |  9:25 |  11.2 |
+| POSTPONED Add auxiliary function properties to c#                           |         |       |  1:11 |   1.4 |
+| POSTPONED Add internal object dumper resolution                             |         |       |  4:51 |   5.8 |
+| POSTPONED Add support for generic container types to C#                     |         |       |  1:16 |   1.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
-*** STARTED Sprint and product backlog grooming                       :story:
+*** COMPLETED Sprint and product backlog grooming                     :story:
+    CLOSED: [2017-01-16 Mon 09:27]
+    CLOCK: [2017-01-16 Mon 09:15]--[2017-01-16 Mon 09:26] =>  0:11
     CLOCK: [2017-01-07 Sat 13:41]--[2017-01-07 Sat 13:46] =>  0:05
     CLOCK: [2017-01-03 Tue 17:06]--[2017-01-03 Tue 17:11] =>  0:05
     CLOCK: [2017-01-03 Tue 17:02]--[2017-01-03 Tue 17:06] =>  0:04
@@ -1000,7 +1002,8 @@ resulted in additional errors:
 - binraries still available in dropbox, code to use them still in
   appveyor.install.windows.ps1.
 
-*** STARTED Create an upsilon yarn frontend                           :story:
+*** POSTPONED Create an upsilon yarn frontend                         :story:
+    CLOSED: [2017-01-16 Mon 09:27]
     CLOCK: [2017-01-15 Sun 12:49]--[2017-01-15 Sun 13:44] =>  0:55
     CLOCK: [2017-01-15 Sun 12:02]--[2017-01-15 Sun 12:48] =>  0:46
     CLOCK: [2017-01-15 Sun 11:36]--[2017-01-15 Sun 12:01] =>  0:5
@@ -1092,7 +1095,8 @@ Tasks:
   workflow should work for upsilon, but then quilt just does nothing.
 - add tailor support so that we can convert upsilon to JSON.
 
-*** STARTED Add auxiliary function properties to c#                   :story:
+*** POSTPONED Add auxiliary function properties to c#                 :story:
+    CLOSED: [2017-01-16 Mon 09:27]
     CLOCK: [2017-01-08 Sun 11:27]--[2017-01-08 Sun 11:40] =>  0:13
     CLOCK: [2017-01-08 Sun 10:56]--[2017-01-08 Sun 11:26] =>  0:30
     CLOCK: [2017-01-08 Sun 10:50]--[2017-01-08 Sun 10:55] =>  0:05
@@ -1126,7 +1130,8 @@ Actually we should also create "attribute properties" as a top-level
 container so that in the future we can latch on other attribute level
 properties.
 
-*** STARTED Add internal object dumper resolution                     :story:
+*** POSTPONED Add internal object dumper resolution                   :story:
+    CLOSED: [2017-01-16 Mon 09:27]
     CLOCK: [2017-01-06 Fri 11:10]--[2017-01-06 Fri 12:55] =>  1:45
     CLOCK: [2017-01-05 Thu 17:38]--[2017-01-05 Thu 18:01] =>  0:23
     CLOCK: [2017-01-05 Thu 14:54]--[2017-01-05 Thu 17:37] =>  2:43
@@ -1154,7 +1159,8 @@ for all model types and primitives. Add a registrar for local dumpers.
 :     }
 : }
 
-*** STARTED Add support for generic container types to C#             :story:
+*** POSTPONED Add support for generic container types to C#           :story:
+    CLOSED: [2017-01-16 Mon 09:27]
     CLOCK: [2017-01-07 Sat 20:43]--[2017-01-07 Sat 21:08] =>  0:25
     CLOCK: [2017-01-07 Sat 18:05]--[2017-01-07 Sat 18:56] =>  0:51
 
@@ -1175,312 +1181,5 @@ Notes:
 
 - we need a way to determine if we are using a helper, the assistant
   or a sequence generator directly.
-
-*** Add support for Language Agnostic Models (LAM)                    :story:
-
-When we start supporting more than one language, one interesting
-feature would be to be able to define a model once and have it
-generated for all supported languages. This would be achieved by
-having a system model (or set of system models) that define all the
-key types in a language agnostic manner. For example:
-
-: lam::string
-: lam::int
-: lam::int16
-
-Each of these types then has a set of meta-data fields that map them
-to a type in a supported language:
-
-: lam:string: cpp.concrete_type_mapping = std::string
-: lam:string: csharp.concrete_type_mapping = string
-
-And so on. We load the user model that makes use of LAM, we generate
-the merged model still with LAM types and then we perform a
-translation for each of the supported and enabled languages: for every
-LAM type, we replace all its references with the corresponding
-concrete type. We need to split the supplied mapping into a QName, use
-the QName to load the system models for that language, look up the
-type and replace it. After the translation no LAM types are left. We
-end up with N yarn merged models where N is the number of supported and
-enabled languages.
-
-Each of these models is then sent down to code generation. This should
-be equivalent to manually generating models per language - we could
-use this as a test.
-
-Once we have LAM, it would be great to be able to exchange data
-between languages. This could be done as follows:
-
-- XML: create a "LAM" XML schema, and a set of formatters that read
-  and write from it. This is kind of like reverse mapping the types
-  back to LAM types when writing the XML.
-- JSON: similar approach to XML, minus the schema.
-- POF: use the coherence libraries to dump the models into POF.
-
-Tasks:
-
-- create the LAM model with a set of basic types.
-- add a set of mapping fields into yarn: =yarn.mapping.csharp=, etc
-  and populate the types with entries for each supported language.
-- create a notion of mapping of intermediate models into
-  languages. The input is the merged intermediate model and the output
-  is N models one per language. We also need a way to associate
-  backends with languages. Each model is sent down to its backend.
-- note that reverse mapping is possible: we should be able to
-  associate a type on a given language with it's lam type. This means
-  that, given a model in say C#, we could reconstruct a yarn lam model
-  (or tell the user about the list of failures to map). This should be
-  logged as a separate story.
-
-Links:
-
-- [[http://stackoverflow.com/questions/741054/mapping-between-stl-c-and-c-sharp-containers][Mapping between stl C++ and C# containers]]
-- [[http://stackoverflow.com/questions/3659044/comparison-of-c-stl-collections-and-c-sharp-collections][Comparison of C++ STL collections and C# collections?]]
-
-*** Fix issues with bintray windows uploads                           :story:
-
-At present we are doing a lot of hacks for windows:
-
-- hardcoding the path to the package
-- not uploading on just tags
-- uploading to the top-level folder instead of the version.
-
-Ideally we want to reuse the Travis BinTray descriptor but AppVeyor
-does not support this directly.
-
-*** Model references are not transitive                               :story:
-
-For some reason we do not seem to be following references of
-referenced models. We should load them automatically, now that they
-are part of the meta-data. However, the =yarn.json= model breaks when
-we remove the reference to annotation even though it does not use this
-model directly and =yarn= is referencing it correctly.
-
-*** Add support for boxed types                                       :story:
-
-At present we support built-in types such as =int= but not
-=System.Integer=. In theory we should be able to add these types with:
-
-:        "quilt.csharp.assistant.requires_assistance": true,
-:        "quilt.csharp.assistant.method_postfix": "ShortByte"
-
-And they should behave just like built-ins.
-
-*** Add handcrafted class to C# test model                            :story:
-
-We should make sure handcrafted code works in C#.
-
-Actually in order to get handcrafted types to work we need support for
-enablement. This is a somewhat tricky feature so we should leave it
-for after all the main ones are done.
-
-*** Add support for arrays                                            :story:
-
-At present the yarn parser does not support array notation:
-=string[]=. We need to look into how arrays would work for C++ and
-implement it in a compatible way.
-
-Links:
-
-- [[https://www.dotnetperls.com/array][array]]
-
-*** Add fluency support for C#                                        :story:
-
-We need to add fluent support for C#.
-
-C# properties are not compatible with the fluent pattern. Instead, one
-needs to create builders, across the inheritance tree.
-
-Links:
-
-- [[http://stackoverflow.com/questions/13761666/how-to-use-fluent-style-syntactic-sugar-with-c-sharp-property-declaration][How to use Fluent style syntactic sugar with c# property declaration]]
-
-*** Add visitor support to C#                                         :story:
-
-Implement the visitor formatters for C#.
-
-*** Benchmarks do not work for utility tests                          :story:
-
-When we run the benchmarks for utility we get an error:
-
-: Running 95 test cases...
-: /home/marco/Development/DomainDrivenConsulting/dogen/projects/utility/tests/asserter_tests.cpp(141): error: in "asserter_tests/assert_directory_good_data_set_returns_true": check asserter::assert_directory(e, a) has failed
-
-Seems like the tests do not clean up after themselves. We need to add
-some clean up logic and re-enable the tests.
-
-*** Add cross-model support to C#                                     :story:
-
-At present we do not have any tests that prove that cross-model
-support is working (other than proxy models). We need to create a user
-level model that makes use of types from another model. In theory it
-should just work since we are using fully qualified names everywhere.
-
-*** Generate AssemblyInfo in C#                                       :story:
-
-We need to inject a type for this in fabric. For now we can leave it
-mainly blank but in the future we need to have meta-data in yarn for
-all of its properties:
-
-: [assembly: AssemblyTitle ("TestDogen")]
-: [assembly: AssemblyDescription ("")]
-: [assembly: AssemblyConfiguration ("")]
-: [assembly: AssemblyCompany ("")]
-: [assembly: AssemblyProduct ("")]
-: [assembly: AssemblyCopyright ("marco")]
-: [assembly: AssemblyTrademark ("")]
-: [assembly: AssemblyCulture ("")]
-: [assembly: AssemblyVersion ("1.0.*")]
-
-These appear to just be properties at the model level.
-
-*** Consider adding a clone method for C#                             :story:
-
-It would be nice to have a way to clone a object graph. We probably
-have an equivalent story for this for C++ in the backlog.
-
-*** Consider making the output directory configurable in C#           :story:
-
-At present we are outputting binaries into the =bin= directory,
-locally on the project directory. However, it would make more sense to
-output to =build/output= like C++ does. For this to work, we need to
-be able to supply an output directory as meta-data.
-
-*** Add support for nuget                                             :story:
-
-A proxy model may require obtaining a nuget package. Users should be
-able to define a proxy model as requiring a nuget package and then
-Dogen should generate packages.config and add all such models to it.
-
-: +  <package id="NUnit" version="2.6.4" targetFramework="net45" />
-
-*** Augment element ID with meta-model type                           :story:
-
-The element ID is considered to be a system-level, opaque
-identifier. It could, for all intents and purposes, be a large int. We
-have decided to use a string so we can dump it to the log and figure
-out what is going on without having to map IDs to a human-readable
-value. In the same vein, we could also add another component to the ID
-that would contain the meta-model element for that ID. This
-information could be placed at the start.
-
-Of course, we will not be able to remove the look-ups we have at
-present that try to figure out the meta-model element because they are
-related to resolution. But for any other cases it may result in
-slightly more performant code. We need to look at all the use cases.
-
-*** Identifiable needs to use camel case in C#                        :story:
-
-At present we are building identifiables with underscores.
-
-*** Generate windows packages with CPack                              :story:
-
-We tried to generate windows packages by using the NSIS tool, but
-there are no binaries available for it at present. However, it seems
-CPack can now generate MSIs directly:
-
-- [[http://stackoverflow.com/questions/18437356/how-to-generate-msi-installer-with-cmake][How to generate .msi installer with cmake?]]
-- [[https://cmake.org/cmake/help/v3.0/module/CPackWIX.html][CPackWIX]]
-
-We need to investigate how to get the build to produce MSIs using WIX.
-
-*** Move enablement into quilt                                        :story:
-
-We need to make use of the exact same logic as implemented in
-=quilt.cpp= for enablement. Perhaps all of the enablement related
-functionality can be lifted and grafted onto quilt without any major
-changes.
-
-*** Add feature to disable regions                                    :story:
-
-We need a way to stop outputting regions if the user does not want
-them.
-
-*** Add parameters for using imported assemblies                      :story:
-
-Assemblies imported via proxy models need to have the ability to
-supply two parameters:
-
-- assembly name: this is not always the same as the proxy model name;
-- root namespace: similarly this may differ from the proxy model name.
-
-These should be supplied as meta data and used when constructing
-fabric types.
-
-*** Add msbuild target for C# test model                              :story:
-
-Once we are generating solutions, we should detect msbuild (or xbuild)
-and build the solution. This should be a CMake target that runs on
-Travis.
-
-*** Add visibility to yarn elements                                   :story:
-
-We need to be able to mark yarn types as:
-
-- public
-- internal
-
-This can then be used by C++ as well for visibility etc.
-
-*** Add partial element support to yarn                               :story:
-
-We need to be able to mark yarn elements as "partial". It is then up
-to programming languages to map this to a language feature. At present
-only [[https://msdn.microsoft.com/en-us/library/wa80x488.aspx][C# would do so]].
-
-It would be nice to have a more meaningful name at yarn
-level. However, seems like this is a fairly general programming
-concept now: [[https://en.wikipedia.org/wiki/Class_(computer_programming)#Partial][wikipedia]].
-
-*** Add visibility to yarn attributes                                 :story:
-
-We need to be able to mark yarn attributes as:
-
-- public
-- private
-- protected
-
-*** Add final support in C#                                           :story:
-
-Links:
-
-- [[https://msdn.microsoft.com/en-us/library/88c54tsw.aspx][sealed (C# Reference)]]
-
-*** Add aspects for C# serialisation support                          :story:
-
-We need to add serialisation support:
-
-- C# serialisation
-- Data Contract serialisation
-- Json serialisation
-
-In C# these are done via attributes so we do not need additional
-facets. We will need a lot of configuration knobs though:
-
-- ability to switch a serialisation method on at model level or
-  element level.
-- support for serialisation specific arguments such as parameters for
-  Json.Net.
-
-Links:
-
-- [[https://msdn.microsoft.com/en-us/library/ms731923(v%3Dvs.110).aspx][Types Supported by the Data Contract Serializer]]
-- [[https://msdn.microsoft.com/en-us/library/ms731073(v%3Dvs.110).aspx][Serialization and Deserialization]]
-- [[https://msdn.microsoft.com/en-us/library/ms733127(v%3Dvs.110).aspx][Using Data Contracts]]
-- [[https://msdn.microsoft.com/en-us/library/ms731923(v%3Dvs.110).aspx][Types Supported by the Data Contract Serializer]]
-
-*** Consider adding =artefact_set= to formatters' model               :story:
-
-We are using collections of artefacts quite a bit, and it makes sense
-to create an abstraction for it such as a =artefact_set=. However, for
-this to work properly we need to add at least one basic behaviour: the
-ability to merge two artefact sets. Or else we will end up having to
-unpack the artefacts, then merging them, then creating a new artefact
-set.
-
-Problem is, we either create the artefact set as a non-generatable
-type - not ideal - or we create it as generatable and need to add this
-as a free function. We need to wait until dogen has support for
-merging code generation.
 
 ** Deprecated
