--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,18 +13,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-17 Tue 20:25]
+#+CAPTION: Clock summary at [2017-01-17 Tue 20:34]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *13:08* |       |       | 100.0 |
+| *Total time*                                                                | *13:16* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 13:08   |       |       | 100.0 |
-| Active                                                                      |         | 13:08 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |  11.7 |
+| Stories                                                                     | 13:16   |       |       | 100.0 |
+| Active                                                                      |         | 13:16 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |  11.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   4.4 |
-| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   6.5 |
-| STARTED Create an upsilon yarn frontend                                     |         |       | 10:10 |  77.4 |
+| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   6.4 |
+| STARTED Create an upsilon yarn frontend                                     |         |       | 10:18 |  77.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -111,6 +111,7 @@ upsilon actually generated C# and C++ code. This is rather puzzling:
   format does not support it).
 
 *** STARTED Create an upsilon yarn frontend                           :story:
+    CLOCK: [2017-01-17 Tue 20:26]--[2017-01-17 Tue 20:34] =>  0:08
     CLOCK: [2017-01-17 Tue 20:12]--[2017-01-17 Tue 20:25] =>  0:13
     CLOCK: [2017-01-17 Tue 18:19]--[2017-01-17 Tue 18:55] =>  0:36
     CLOCK: [2017-01-17 Tue 18:15]--[2017-01-17 Tue 18:18] =>  0:03
