--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,18 +13,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-17 Tue 20:34]
+#+CAPTION: Clock summary at [2017-01-17 Tue 21:12]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *13:16* |       |       | 100.0 |
+| *Total time*                                                                | *13:33* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 13:16   |       |       | 100.0 |
-| Active                                                                      |         | 13:16 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |  11.6 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   4.4 |
-| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   6.4 |
-| STARTED Create an upsilon yarn frontend                                     |         |       | 10:18 |  77.6 |
+| Stories                                                                     | 13:33   |       |       | 100.0 |
+| Active                                                                      |         | 13:33 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |  11.3 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   4.3 |
+| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   6.3 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  76.0 |
+| STARTED Bind language to kernel                                             |         |       |  0:17 |   2.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -110,7 +111,8 @@ upsilon actually generated C# and C++ code. This is rather puzzling:
   etc. We did not set up any meta-data in upsilon (nor can we as the
   format does not support it).
 
-*** STARTED Create an upsilon yarn frontend                           :story:
+*** COMPLETED Create an upsilon yarn frontend                         :story:
+    CLOSED: [2017-01-17 Tue 21:08]
     CLOCK: [2017-01-17 Tue 20:26]--[2017-01-17 Tue 20:34] =>  0:08
     CLOCK: [2017-01-17 Tue 20:12]--[2017-01-17 Tue 20:25] =>  0:13
     CLOCK: [2017-01-17 Tue 18:19]--[2017-01-17 Tue 18:55] =>  0:36
@@ -213,7 +215,8 @@ Other problems:
 - logging: add field etc names, move to trace
 - how do we determine the target model?
 
-*** Bind language to kernel                                           :story:
+*** STARTED Bind language to kernel                                   :story:
+    CLOCK: [2017-01-17 Tue 20:55]--[2017-01-17 Tue 21:12] =>  0:17
 
 At present we have the notion of a language at the frontend level but
 this is not really used when determining available kernels. So we
@@ -222,7 +225,21 @@ all. This is not ideal; we could instead determine what languages the
 kernel supports and only generate if its a supported language. This
 would stop us code-generating a C# model in C++ and vice-versa.
 
-*** Add output languages                                              :story:
+Notes:
+
+- add a list of languages to the model, populate them from upsilon.
+- for other models read it from meta-data; if not populated, assume
+  its the same as the input language.
+- at the kernel level, check to see if the language matches the
+  kernel. Each kernel has a hard-coded language.
+- in yarn, once the model is merged checked its input and output
+  languages. If they are different, send the model to the
+  mapper. Actually we need to do this at a higher level in order to
+  cater for multiple output languages.
+
+Merged stories:
+
+*Add output languages*
 
 At present we only support the input language associated with the
 model. This has been sufficient because the input and output language
