--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,19 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-17 Tue 21:12]
+#+CAPTION: Clock summary at [2017-01-18 Wed 12:00]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *13:33* |       |       | 100.0 |
+| *Total time*                                                                | *14:53* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 13:33   |       |       | 100.0 |
-| Active                                                                      |         | 13:33 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |  11.3 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   4.3 |
-| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   6.3 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  76.0 |
-| STARTED Bind language to kernel                                             |         |       |  0:17 |   2.1 |
+| Stories                                                                     | 14:53   |       |       | 100.0 |
+| Active                                                                      |         | 14:53 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |  10.3 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   3.9 |
+| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   5.7 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  69.2 |
+| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   9.0 |
+| STARTED Bind language to kernel                                             |         |       |  0:17 |   1.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -214,6 +215,13 @@ Other problems:
 - referencing all system types even for other languages.
 - logging: add field etc names, move to trace
 - how do we determine the target model?
+
+*** COMPLETED Fields with collections in upsilon cause errors         :story:
+    CLOSED: [2017-01-18 Wed 11:59]
+    CLOCK: [2017-01-18 Wed 10:39]--[2017-01-18 Wed 11:59] =>  1:20
+
+It seems that when we refer to a collection on the target model,
+resolution fails.
 
 *** STARTED Bind language to kernel                                   :story:
     CLOCK: [2017-01-17 Tue 20:55]--[2017-01-17 Tue 21:12] =>  0:17
